--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>TASTE OF TRAVELS</title>
+  </head>
+  <meta charset="UTF-8">
+  <meta name="description" content="Embark on a culinary adventure with Taste of Travel, exploring global flavors and recipe.">
+  <body>
+    <header>
+      <h1>Discover the Flavors of Thailand</h1>
+    </header>
+    <main>
+      <h2>Tom Yum Goong:A Spicy Thai Delight</h2>
+      <p>Tom Yum Goong is a classic Thai soup renowned for its bold flavors and aromatic spices. This hot and sour soup features a tantalizing blend of lemongrass, galangal,and kaffir lime leaves, combined with succulent shrimp.</p>
+      <blockquote>"The key to a delicious Tom Yum Goong lies in the balance of flavors — sweet, sour, salt, and spicy." —Chef Somchai</blockquote>
+      <h2>Ingredients:</h2>
+      <UL>
+        <Li><strong>Lemongrass</strong>: 2 stalks</Li>
+        <Li><strong>Thai basil</strong>: 1 cup</Li>
+        <Li><strong>Kaffir lime leaves</strong>: 3 leaves</Li>
+        <Li><strong>Shrimp</strong>: 500g</Li>
+      </UL>
+    </main>
+  </body>
+</html>
