--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
         <Li><strong>Kaffir lime leaves</strong>: 3 leaves</Li>
         <Li><strong>Shrimp</strong>: 500g</Li>
       </UL>
+      <h2>Preperation</h2>
+      <UL>
+        <strong>1.</strong> <em>Simmer</em> the broth for 10 minutes.
+        <strong>2.</strong> Add the lemongrass, galangal, and kaffir lime leaves.
+        <strong>3.</strong> <em>Stir</em> in shrimp and cook until pink. 
+        <strong>4.</strong> <em>Season</em> with fish sauce, lime juice, and chili paste. 
+        <strong>5.</strong> <em>Garnish</em> with Thai Basil and serve hot. 
+      </UL>
+      <h2>Cooking Tips</h2>
+      <UL>
+        <Li><sub>1/4 cup</sub> of fish sauce adds authentic Thai flavor.</Li>
+        <Li><sub>1 tablespoon</sub> of chili paste gives the soup its signature heat.<sup>(spicy serving size)</sup></Li>
+      </UL>
     </main>
   </body>
 </html>
