--- a/index.html
+++ b/index.html
@@ -34,5 +34,45 @@
         <Li><sub>1 tablespoon</sub> of chili paste gives the soup its signature heat.<sup>(spicy serving size)</sup></Li>
       </UL>
     </main>
+    <br>
+    <img src="https://edube.org/uploads/media/default/0001/04/thai-soup.jpg" alt="Tom Yum Goong">
+    <br>
+  </body>
+  <br>
+  <br>
+  <body>
+    <table class="recipe-table">
+      <caption>Recipe Details</caption>
+      <thead>
+        <tr>
+          <th>Ingredients</th>
+          <th>Quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Lemongrass</td>
+          <td>2 stalks</td>
+        </tr>
+        <tr>
+          <td>Thai basil</td>
+          <td>1 cup</td>
+        </tr>
+        <tr>
+          <td>Kaffir lime leaves</td>
+          <td>3 leaves</td>
+        </tr>
+        <tr>
+          <td>Shrimp</td>
+          <td>500g</td>
+        </tr>
+<tr class="info-row">
+  <td colspan="2">Preperation Time: 20 minutes</td>
+</tr>
+        <tr class="infor-row">
+          <td colspan="2">Serving suggestions: Serve with steamed rice or jasmine tea.</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
