--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <img src="https://edube.org/uploads/media/default/0001/04/thai-soup.jpg" alt="Tom Yum Goong">
     <br>
     <table class="recipe-table">
+        <hr>
         <caption>Recipe Details</caption>
         <thead>
             <tr>
@@ -66,12 +67,13 @@
                 <td>500g</td>
             </tr>
             <tr class="info-row">
-                <td colspan="2">Preparation Time: 20 minutes</td>
+                <td colspan="2"><strong>Preparation Time:</strong>strong 20 minutes</td>
             </tr>
             <tr class="info-row">
-                <td colspan="2">Serving suggestions: Serve with steamed rice or jasmine tea.</td>
+                <td colspan="2"><strong>Serving suggestions:</strong>Serve with steamed rice or jasmine tea.</td>
             </tr>
         </tbody>
     </table>
+    <hr>
 </body>
 </html>
