--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
     </main>
     <br>
-    <img src="https://edube.org/uploads/media/default/0001/04/thai-soup.jpg" alt="Tom Yum Goong">
+    <img src="https://edube.org/uploads/media/default/0001/04/thai-soup.jpg" alt="Tom Yum Goong" height="300" width="300">
     <br>
     <table class="recipe-table">
         <hr>
